# open-jarvis

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  UI_IMPROVEMENTS.md  UI_IOS_ROUNDING_IMPROVEMENTS.md  alembic.ini  docker-compose.yml  jarvisctl  jarvisctl.py  pyproject.toml  pytest.ini  requirements.txt  skill_catalog.py  skill_report.md  架构设计.md  流程设计.md  设计文档.md
.github/scripts/: configure_android_signing.py
.github/workflows/: build-android-apk.yml
app/: CLAUDE.md  __init__.py  config.py  main.py  pubspec.yaml
app/api/: __init__.py  router.py
app/domain/: __init__.py  aggregate.py  assignment.py  budget.py  diagnosis.py  experience.py  final_answer.py  plan.py  review.py  run_context.py  task.py
app/graph/: __init__.py  builder.py  checkpointer.py  clock.py  projection.py  safety.py  serde.py  state.py  validation.py
app/lib/: main.dart
app/linux/: CMakeLists.txt
app/models/: __init__.py  base.py  callbacks.py  router.py  structured.py
app/observability/: __init__.py  logging.py  metrics.py  tracing.py
app/repositories/: __init__.py  base.py  event.py  experience.py  plan.py  run.py
app/services/: __init__.py  artifact.py  event.py  experience.py  run.py
app/tools/: __init__.py  (+3 more)
client/: .env.example  Dockerfile  Dockerfile.cn  __init__.py  ai.py  checkpoints.py  config.py  langgraph_workflow.py  models.py  planner.py  redaction.py  requirements.txt  runtime.py  safety.py  security.py  service.py  skill_runtime.py  storage.py
dashboard/: .env.example  DEPLOYMENT.md  Dockerfile  Dockerfile.cn  README.md  __init__.py  index.html  nginx.conf  nginx.conf.example  package-lock.json  package.json  router.py  vite.config.ts
docs/: skill-预设配置与调用.md
gateway/: .env.example  Dockerfile  Dockerfile.cn  __init__.py  ai.py  client_package.py  dashboard_api.py  local_executor.py  main.py  quick_deploy.py  requirements.txt  security.py  settings.py  skill_archive.py  store.py
migrations/: README.md  env.py
tests/: __init__.py  conftest.py
web/: .gitkeep  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+198 files in other folders)
