[project]
name = "open-jarvis"
version = "0.1.0"
description = "Open Jarvis Agent - 基于 LangChain + LangGraph 的可恢复、多任务 Agent 编排系统"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Open Jarvis" }]
dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.3",
    # Agent / LLM
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.2.0",
    # 数据建模
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # 持久化
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "asyncpg>=0.29.0",
    "redis>=5.1.0",
    # 可观测性
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "structlog>=24.4.0",
    # 通用工具
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.1",
    "langchain-openai>=1.3.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "respx>=0.21.1",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "ipython>=8.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------- Ruff ----------------
[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ---------------- MyPy ----------------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/versions/"]

[[tool.mypy.overrides]]
module = ["langgraph.*", "langchain.*"]
ignore_missing_imports = true

# ---------------- Pytest ----------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: 需要 PostgreSQL/Redis 等外部服务的集成测试",
    "scenario: 端到端固定场景测试",
]
